<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <View
            android:layout_width="2dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:background="@color/color_3" />

        <TextView
            android:id="@+id/tv_type_medal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:text="@string/medal_str_share"
            android:textColor="@color/color_3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_count_medal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:text="@string/medal_str_count"
            android:textColor="@color/color_9"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_type_chose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="7dp"
            android:text="@string/medal_all_share"
            android:textColor="@color/color_4A90E2"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/medal_no_special_tv"
        android:textColor="@color/color_9"
        android:textSize="@dimen/sp_14"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_public_recycler"
        android:layout_width="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp" />
</LinearLayout>