<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="180dp"
    android:background="@drawable/shape_radius2_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/tvMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@mipmap/home_ic_delete_warning"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="删除课程将视为退课，是否确认退课？"
        android:textColor="@color/color_2"
        android:textSize="15sp"
        tools:text="@string/text_ser_del_resource"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="-3dp"
            android:layout_weight="1"
            android:background="@mipmap/common_bg_pop_cancel_left"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/color_9B9B9B"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/tvOk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-3dp"
            android:layout_weight="1"
            android:background="@mipmap/common_bg_pop_ok_right"
            android:gravity="center"
            android:text="@string/text_ok"
            android:textColor="@color/color_white"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
