<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="263dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_corner3_stroke1_colorf">

    <TextView
        android:id="@+id/layout_title_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/color_9B9B9B"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_below="@id/layout_title_more"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_cancel_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/color_9B9B9B"
            android:textSize="17sp" />

        <View
            android:id="@+id/layout_line_one_more"
            android:layout_width="0.5dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:background="@color/color_A5A5A5" />

        <TextView
            android:id="@+id/layout_minimize_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="center"
            android:text="@string/text_minimize"
            android:textColor="@color/color_9B9B9B"
            android:textSize="17sp" />

        <View
            android:id="@+id/layout_line_two_more"
            android:layout_width="0.5dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:background="@color/color_A5A5A5" />

        <TextView
            android:id="@+id/layout_quit_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="center"
            android:text="@string/text_quit"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </LinearLayout>
</RelativeLayout>
