<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="263dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_radius3_white">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="24dp"
        tools:text="是否清空历史记录"
        android:textColor="@color/color_9B9B9B"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/color_9B9B9B"
            android:textSize="17sp" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="0.5dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:background="@color/color_A5A5A5" />

        <TextView
            android:id="@+id/tvMiddle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="center"
            android:visibility="gone"
            tools:text="@string/text_minimize"
            android:textColor="@color/color_9B9B9B"
            android:textSize="17sp" />

        <View
            android:id="@+id/viewLine2"
            android:layout_width="0.5dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:background="@color/color_A5A5A5" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="center"
            tools:text="@string/text_quit"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>