<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F3F3F3"
    android:orientation="vertical">

    <com.mooc.resource.widget.CommonTitleLayout
        android:id="@+id/commonTitleSelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        app:ctl_adapteStatusBar="true"
        app:ctl_middle_text="我要自荐" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svSelfRecommend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F3F3F3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tvSelfRecommendDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:text="@string/text_str_self_recommend_reason"
                android:textColor="@color/color_4C4C4C"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/etSelfRecommend"
                android:layout_width="match_parent"
                android:layout_height="233dp"
                android:layout_below="@+id/tvSelfRecommendDesc"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_edit_white"
                android:gravity="top"
                android:hint="@string/hint_str_self_recommend"
                android:lineSpacingExtra="3dp"
                android:minLines="3"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:paddingRight="15dp"
                android:paddingBottom="12dp"
                android:textColor="@color/color_4C4C4C"
                android:textColorHint="@color/color_CB"
                android:textSize="13sp"
                tools:ignore="Autofill,TextFields" />

            <TextView
                android:id="@+id/tvSelfRecommendLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/etSelfRecommend"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/hint_str_self_recommend_limit"
                android:textColor="@color/color_8E"
                android:textSize="13sp"
                tools:ignore="RtlHardcoded" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>